# Haliax

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  setup.py
Projects/: DiffEq.ipynb  ThermalCrossSections.ipynb  Untitled.ipynb
Projects/.ipynb_checkpoints/: DarkSUNScan-checkpoint.ipynb  DiffEq-checkpoint.ipynb  ThermalCrossSections-checkpoint.ipynb
Projects/BoltzmanAsymAnalysis/: Untitled.ipynb
Projects/KineticDecoupling/: Untitled.ipynb
Projects/KineticDecoupling/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
haliax/: constants.cpp  cosmology.cpp  diffeq.cpp  dm_models.cpp
lanre/: CMakeLists.txt
lanre/include/: CMakeLists.txt
lanre/include/lanre/: constants.hpp  lanre.hpp  particles.hpp  roots.hpp  utils.hpp
lanre/include/lanre/autodiff/: dual.hpp
lanre/include/lanre/cosmology/: standard_model.hpp  thermodynamic_functions.hpp  thermodynamic_particle.hpp
lanre/include/lanre/diffeq/: algorithm.hpp  base.hpp  decsol.hpp  dormand_prince.hpp  function.hpp  integrator.hpp  problem.hpp  radau.hpp  rodas.hpp  seulex.hpp  seulex2.hpp  solution.hpp
lanre/include/lanre/dm_models/: constant_thermal_cross_section.hpp  darksun.hpp  dipole_dm.hpp  higgs_portal.hpp  kinetic_mixing.hpp  thermally_decoupled_model.hpp
lanre/include/lanre/dm_models/kinetic_mixing/: boltzmann.hpp  cross_sections.hpp  parameters.hpp  relic_density_bender.hpp  relic_density_gondolo_gelmini.hpp  relic_density_mpu.hpp  thermal_cross_section.hpp  widths.hpp
lanre/include/lanre/gamma_ray_spectra/: charged_pion.hpp  muon.hpp  neutral_pion.hpp
lanre/include/lanre/integrate/: base.hpp  cheb.hpp  qag.hpp  qagi.hpp  qagp.hpp  qags.hpp  qawc.hpp  qext.hpp  qk.hpp  qmomo.hpp  qsrt.hpp  quad.hpp  utils.hpp  wgt.hpp
lanre/include/lanre/interpolate/: curfit.hpp  fpader.hpp  fpback.hpp  fpbspl.hpp  fpchec.hpp  fpcurf.hpp  fpcuro.hpp  fpdisc.hpp  fpgivs.hpp  fpintb.hpp  fpknot.hpp  fprati.hpp  fprota.hpp  spalde.hpp  splder.hpp  splev.hpp  splint.hpp  sproot.hpp  univariate_spline.hpp
lanre/include/lanre/optimize/: chkder.hpp  dogleg.hpp  fdjac1.hpp  fdjac2.hpp  hybrd.hpp  hybrj.hpp  qform.hpp  qrfac.hpp  qrsolv.hpp  r1mpyq.hpp  r1updt.hpp  rwupdt.hpp
lanre/include/lanre/phase_space/: base.hpp  rambo.hpp
lanre/include/lanre/special_functions/: besseli.hpp  besselk.hpp  chbevl.hpp  lambertw.hpp
lanre/test/: CMakeLists.txt  test_cosmology_standard_model.cpp  test_cosmology_thermodynamic_particle.cpp  test_diffeq_non_stiff.cpp  test_diffeq_stiff.cpp  test_dm_models_compute_xi.cpp  test_dm_models_constant_thermal_cross_section.cpp  test_dm_models_darksun.cpp  test_dm_models_dipole_dm.cpp  test_dual.cpp  test_gamma_ray_spectra_neutral_pion.cpp  test_higgs_portal.cpp  test_integrate_qags.cpp  test_integrate_quad.cpp  test_integrate_vegas.cpp  test_interpolate_univariate_spline.cpp  test_kinetic_mixing.cpp  test_optimize_hybrd.cpp  test_optimize_hybrj.cpp  test_particles.cpp  test_phase_space_rambo.cpp  test_roots_bracket.cpp  test_special_functions_besselk.cpp  test_special_functions_lambertw.cpp
tests/: test_bessel.py  test_higgs_portal.py
